Add Swagger documentation for urls handler
